--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ body{
     text-transform: uppercase;
     gap: 1rem;
     cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
 }
 
 .theme-mode-name{
@@ -145,7 +148,7 @@ body{
     transition: .3s;
 }
 
-.theme-mode-icon:hover{
+.theme-mode-switcher:hover .theme-mode-icon {
     transform: rotate(180deg);
 }
 
@@ -461,6 +464,10 @@ form{
         background-color: var(--very-dark-blue-clr);
         color: var(--white-clr);
     }
+
+    .theme-mode-switcher{
+        color: var(--white-clr);
+    }
     
     form{
         -webkit-box-shadow: 0px 8px 20px -10px rgba(18, 18, 18, 1);
@@ -509,6 +516,10 @@ form{
     .profile-socials{
         background-color: var(--greyish-white-clr);
         color: var(--grey-clr);
+    }
+
+    .theme-mode-switcher{
+        color: var(--greyish-blue-clr);
     }
 
     form{
@@ -570,6 +581,10 @@ body.dark-theme,
     color: var(--white-clr);
 }
 
+.dark-theme .theme-mode-switcher{
+    color: var(--white-clr);
+}
+
 .dark-theme form{
     -webkit-box-shadow: 0px 8px 20px -10px rgba(18, 18, 18, 1);
     -moz-box-shadow: 0px 8px 20px -10px rgba(18, 18, 18, 1);
@@ -603,12 +618,14 @@ body.dark-theme,
     background-color: var(--navy-blue-clr);
 }
 
-
-
 body.light-theme,
 .light-theme .profile-socials{
     background-color: var(--greyish-white-clr);
     color: var(--grey-clr);
+}
+
+.light-theme .theme-mode-switcher{
+    color: var(--greyish-blue-clr);
 }
 
 .light-theme form{
